# backend/src/controllers/UserController.js
@@ -1,41 +1,0 @@
-const userService = require('../services/userService');
-
-const postUser = async (req, res) => {
-  const { telephone, password, name, email } = req.body;
-  const response = await userService.createUser(name, telephone, email, password);
-  return res.status(response.statusCode).json(response.data);
-}
-
-const getUser = async (req, res) => {
-  const response = await userService.getUsers();
-  return res.status(response.statusCode).json(response.data);
-}
-
-const getUserByTelephoneAndPassword = async (req, res) => {
-  const { telephone, password } = req.params;
-  const response = await userService.getUserByTelephoneAndPassword(telephone, password);
-  return res.status(response.statusCode).json(response.data);
-}
-
-const login = async (req, res) => {
-  const { body } = req;
-  const response = await userService.loginService(body)
-  return res.status(response.statusCode).json(response.data);
-}
-
-const deleteUser = async (req, res) => {
-  const { telephone } = req.params;
-  const response = await userService.deleteUserService(telephone);
-  return res.status(response.statusCode).json(response.data);
-}
-
-
-
-
-module.exports = {
-  postUser,
-  getUser,
-  getUserByTelephoneAndPassword,
-  login,
-  deleteUser
-}
