# backend/swagger_output.json
@@ -1,8 +1,8 @@
 {
   "swagger": "2.0",
   "info": {
-    "version": "1.0",
-    "title": "Lets Code Me Leva Ai para o Ifood",
+    "version": "1.0.0",
+    "title": "Me Leva Ai",
     "description": ""
   },
   "host": "localhost:3001",
@@ -15,7 +15,7 @@
       "type": "apiKey",
       "in": "header",
       "name": "x-access-token",
-      "description": "Adicionar o token gerado no x-access-token"
+      "description": "Adicionar o token gerado no login"
     }
   },
   "consumes": [
@@ -28,22 +28,32 @@
     "/user/login": {
       "post": {
         "description": "",
-        "parameters": [],
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "telephone": {
+                  "example": "any"
+                },
+                "password": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
         "responses": {}
       }
     },
-    "/user/{telephone}/{password}": {
-      "get": {
+    "/user/{telephone}": {
+      "put": {
         "description": "",
         "parameters": [
           {
             "name": "telephone",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "password",
             "in": "path",
             "required": true,
             "type": "string"
@@ -62,9 +72,7 @@
             "description": "Internal Server Error"
           }
         }
-      }
-    },
-    "/user/{telephone}": {
+      },
       "delete": {
         "description": "",
         "parameters": [
@@ -91,6 +99,30 @@
       }
     },
     "/rides/{id}": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "x-access-token",
+            "in": "header",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
       "patch": {
         "description": "",
         "parameters": [
@@ -128,12 +160,12 @@
         }
       }
     },
-    "/rides/users/{telephone}": {
+    "/rides/users/{id}": {
       "get": {
         "description": "",
         "parameters": [
           {
-            "name": "telephone",
+            "name": "id",
             "in": "path",
             "required": true,
             "type": "string"
@@ -146,6 +178,123 @@
           {
             "name": "page",
             "in": "query",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/vehicle/vehicles": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "x-access-token",
+            "in": "header",
+            "type": "string"
+          },
+          {
+            "name": "page",
+            "in": "query",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "x-access-token",
+            "in": "header",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/vehicle/vehicles/{id}": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "x-access-token",
+            "in": "header",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "put": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "x-access-token",
+            "in": "header",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "delete": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "x-access-token",
+            "in": "header",
             "type": "string"
           }
         ],
